--- a/myflow/flow.dag.yaml
+++ b/myflow/flow.dag.yaml
@@ -22,9 +22,10 @@ nodes:
     path: chat.jinja2
   inputs:
     deployment_name: meta-llama/llama-3.2-3b-instruct:free
-    max_tokens: "256"
-    temperature: "0.1"
+    max_tokens: 256
+    temperature: 0.1
     chat_history: ${inputs.chat_history}
     question: ${inputs.question}
+    model: meta-llama/llama-3.2-3b-instruct:free
   connection: myopenroutername
   api: chat
