--- a/mtgflow/flow.dag.yaml
+++ b/mtgflow/flow.dag.yaml
@@ -1,4 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json
+environment:
+  python_requirements_txt: requirements.txt
 inputs:
   chat_history:
     type: list
@@ -7,24 +9,19 @@ inputs:
   question:
     type: string
     is_chat_input: true
+    default: '{ "cardText": "If you lost life this turn, draw a card." }'
 outputs:
-  answer:
+  output:
     type: string
-    reference: ${chat.output}
+    reference: ${mypython.output}
     is_chat_output: true
 nodes:
-- name: chat
-  type: llm
+- name: mypython
+  type: python
   source:
     type: code
-    path: chat.jinja2
+    path: mypython.py
   inputs:
-    deployment_name: gpt-35-turbo
-    max_tokens: '256'
-    temperature: '0.7'
+    prompty_path: mtgflow.prompty
     chat_history: ${inputs.chat_history}
-    question: ${inputs.question}
-  api: chat
-  connection: open_ai_connection
-environment:
-  python_requirements_txt: requirements.txt
+    user_input: ${inputs.question}
