--- a/mtgflow/runflow.yaml
+++ b/mtgflow/runflow.yaml
@@ -1,7 +1,7 @@
-name: mtgflow_run_fdn_256_2
 display_name: mtgflow_${variant_id}_${timestamp} # supported macros: ${variant_id},${timestamp},${run}
 flow: /workspaces/promptflow/mtgflow
 data: /workspaces/promptflow/mtgflow/card_texts_fdn_256.jsonl
 column_mapping:
   card_text: ${data.cardText}
+  card_name: ${data.name}
   card_uuid: ${data.uuid}
